fix(dicts): correct text color on dark mode

--- a/src/components/dictionaries/cobuild/_style.shadow.scss
+++ b/src/components/dictionaries/cobuild/_style.shadow.scss
@@ -2510,6 +2510,7 @@
     display: inline-block;
     line-height: 26px;
     padding: 4px 8px;
+    color: #333;
     background-color: #e5ebf3;
     margin: 6px 2px 10px 2px;
     border: 0;
